<resources>

    <string name="app_name">Personal Trainer Manager</string>

    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="user_name">jdoe</string>
    <string name="password">welcome1</string>
    <string name="sign_in">Sign in</string>
    <string name="successful_sign_in">Logged in successfully</string>
    <string name="logoutPromptText">Logging You Off</string>
    <string name="error_invalid_user">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logged">Logged In:</string>
    <string name="new_customer">New Customer</string>
    <string name="list_customers">Customer List</string>
    <string name="sessions">View Sessions</string>

    <string name="fromGalleryButton">Gallery</string>
    <string name="fromCameraButton">Camera</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintDateOfBirth">Date of Birth</string>
    <string name="hintBillingInfo">Billing Information</string>
    <string name="hintEmail">Email</string>
    <string name="buttonSaveCustomer">Save Customer</string>
    <string name="setNewPhotoText">Set new photo from:</string>
    <string name="hintSessionName">Session Name</string>
    <string name="hintSessionDate">Session Date</string>
    <string name="hintSessionTime">Session Time</string>
    <string name="hintSessionCost">Session Cost</string>
    <string name="saveSessionButton">Save Session</string>

    <string name="textSignature">Signature:</string>
    <string name="buttonAuthorize">Authorize</string>
    <string name="buttonCancel">Cancel</string>

    <string name="photoDescription">Photo of the user.</string>
    <string name="descriptionAppIcon">App Icon</string>

    <string name="title_activity_customer_list">CustomerList</string>
    <string name="title_activity_customer_page">CustomerPage</string>
    <string name="title_activity_edit_customer">EditCustomer</string>
    <string name="title_activity_edit_session">EditSession</string>

</resources>
