<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/header_container"
        tools:layout="@layout/fragment_header"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/screen_margin"
            android:id="@+id/linearLayout2">

            <ImageView
                android:contentDescription="@string/photoDescription"
                android:layout_width="180dp"
                android:layout_height="135dp"
                android:id="@+id/customer_photo_imageview"
                android:background="@color/colorCustomerImage"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/setNewPhotoText"
                    android:textSize="15sp"
                    android:textColor="#222"
                    />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fromGalleryButton"
                    android:id="@+id/from_gallery_button"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fromCameraButton"
                    android:id="@+id/from_camera_button"
                    android:background="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Content Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/screen_margin"
            android:paddingStart="@dimen/screen_margin"
            android:paddingRight="@dimen/screen_margin"
            android:paddingEnd="@dimen/screen_margin"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hintFirstName"
                android:ems="10"
                android:id="@+id/edit_first_name_field"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hintLastName"
                android:ems="10"
                android:id="@+id/edit_last_name_field"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edit_date_of_birth_field"
                android:layout_marginTop="10dp"
                android:hint="@string/hintDateOfBirth"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edit_billing_info_field"
                android:layout_marginTop="10dp"
                android:hint="@string/hintBillingInfo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edit_email_field"
                android:layout_marginTop="10dp"
                android:hint="@string/hintEmail"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:text="@string/buttonSaveCustomer"
            android:layout_margin="18dp"
            android:id="@+id/save_customer_button"
            android:background="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <!-- Material Design Button -->
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_addButtonColorPressed="@color/colorAccent"
            fab:fab_addButtonPlusIconColor="@color/colorWhite"
            fab:fab_labelStyle="@style/menuLabelStyle"
            fab:fab_labelsPosition="left"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorBlackSemiTransparent"
                fab:fab_title="Logout"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_size="mini"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>

</LinearLayout>