<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/header_container"
        tools:layout="@layout/fragment_header"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/screen_margin"
            android:id="@+id/linearLayout">

            <ImageView
                android:contentDescription="@string/photoDescription"
                android:layout_width="180dp"
                android:layout_height="135dp"
                android:id="@+id/customer_photo_imageview"
                android:background="@color/colorCustomerImage"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="First Name"
                    android:id="@+id/first_name_textview"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="Last Name"
                    android:id="@+id/last_name_textview"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/screen_margin"
            android:paddingStart="@dimen/screen_margin"
            android:paddingRight="@dimen/screen_margin"
            android:paddingEnd="@dimen/screen_margin"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_session_name_field"
                android:hint="@string/hintSessionName"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edit_session_date_field"
                android:hint="@string/hintSessionDate"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/edit_session_time_field"
                android:hint="@string/hintSessionTime"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edit_session_cost_field"
                android:layout_marginTop="10dp"
                android:hint="@string/hintSessionCost"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveSessionButton"
            android:id="@+id/save_session_button"
            android:layout_margin="18dp"
            android:width="200dp"
            android:background="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <!-- Material Design Button -->
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_addButtonColorPressed="@color/colorAccent"
            fab:fab_addButtonPlusIconColor="@color/colorWhite"
            fab:fab_labelStyle="@style/menuLabelStyle"
            fab:fab_labelsPosition="left"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_finish_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorBlackSemiTransparent"
                fab:fab_title="Finish Session"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_size="mini"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_delete_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorBlackSemiTransparent"
                fab:fab_title="Delete Session"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_size="mini"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorBlackSemiTransparent"
                fab:fab_title="Logout"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_size="mini"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</LinearLayout>